--- a/trunk/SabadBan/SabadBan/BuyInfoCell.xib
+++ b/trunk/SabadBan/SabadBan/BuyInfoCell.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="IRANSans.ttf">
@@ -22,51 +23,54 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfg-JX-AqQ">
-                        <rect key="frame" x="272" y="10" width="40" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="xfg-JX-AqQ">
+                        <rect key="frame" x="221" y="10" width="91" height="24"/>
                         <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u8X-4d-BdU">
-                        <rect key="frame" x="112" y="10" width="40" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="u8X-4d-BdU">
+                        <rect key="frame" x="97" y="10" width="53" height="24"/>
                         <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u72-lp-xTb">
-                        <rect key="frame" x="200" y="10" width="40" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="u72-lp-xTb">
+                        <rect key="frame" x="155" y="10" width="53" height="24"/>
                         <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="15"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyI-rp-T5Q">
-                        <rect key="frame" x="4" y="3" width="25" height="35"/>
+                        <rect key="frame" x="4" y="3" width="35" height="35"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="25" id="ofZ-8V-hFO"/>
+                            <constraint firstAttribute="width" constant="35" id="ofZ-8V-hFO"/>
                         </constraints>
                         <state key="normal" image="Delete"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66X-Mt-doS">
-                        <rect key="frame" x="42" y="4" width="25" height="35"/>
+                        <rect key="frame" x="52" y="4" width="35" height="35"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="25" id="L2g-E1-prK"/>
+                            <constraint firstAttribute="width" constant="35" id="L2g-E1-prK"/>
                         </constraints>
                         <state key="normal" image="Edit"/>
                     </button>
                 </subviews>
                 <color key="backgroundColor" red="0.16862745100000001" green="0.2274509804" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="u8X-4d-BdU" firstAttribute="leading" secondItem="66X-Mt-doS" secondAttribute="trailing" constant="45" id="EYd-H6-7pW"/>
-                    <constraint firstItem="xfg-JX-AqQ" firstAttribute="trailing" secondItem="iuB-G9-LyX" secondAttribute="trailingMargin" id="Opi-NX-lhC"/>
+                    <constraint firstItem="xfg-JX-AqQ" firstAttribute="trailing" secondItem="iuB-G9-LyX" secondAttribute="trailingMargin" id="0OD-rd-tQq"/>
+                    <constraint firstItem="u8X-4d-BdU" firstAttribute="width" secondItem="iuB-G9-LyX" secondAttribute="width" multiplier="1/6" id="1zM-6H-gkV"/>
+                    <constraint firstItem="xfg-JX-AqQ" firstAttribute="width" secondItem="iuB-G9-LyX" secondAttribute="width" multiplier="2/7" id="8WZ-2z-zGe"/>
+                    <constraint firstItem="u8X-4d-BdU" firstAttribute="leading" secondItem="66X-Mt-doS" secondAttribute="trailing" constant="10" id="EYd-H6-7pW"/>
+                    <constraint firstItem="xfg-JX-AqQ" firstAttribute="baseline" secondItem="u72-lp-xTb" secondAttribute="baseline" id="IkN-GC-n9Q"/>
                     <constraint firstItem="66X-Mt-doS" firstAttribute="leading" secondItem="fyI-rp-T5Q" secondAttribute="trailing" constant="13" id="RK4-c4-GQ7"/>
                     <constraint firstItem="fyI-rp-T5Q" firstAttribute="top" secondItem="66X-Mt-doS" secondAttribute="top" constant="-1" id="UCs-Dp-WK1"/>
                     <constraint firstItem="fyI-rp-T5Q" firstAttribute="centerY" secondItem="66X-Mt-doS" secondAttribute="centerY" constant="-1" id="VnT-XC-Svf"/>
                     <constraint firstItem="66X-Mt-doS" firstAttribute="top" secondItem="iuB-G9-LyX" secondAttribute="topMargin" constant="-4" id="XqM-EU-5LW"/>
-                    <constraint firstItem="u72-lp-xTb" firstAttribute="baseline" secondItem="xfg-JX-AqQ" secondAttribute="baseline" id="a0q-uV-xO2"/>
                     <constraint firstItem="66X-Mt-doS" firstAttribute="centerY" secondItem="u8X-4d-BdU" secondAttribute="centerY" constant="-1" id="cug-QM-Qst"/>
-                    <constraint firstItem="u72-lp-xTb" firstAttribute="leading" secondItem="u8X-4d-BdU" secondAttribute="trailing" constant="48" id="jbB-m1-APq"/>
+                    <constraint firstItem="u72-lp-xTb" firstAttribute="leading" secondItem="u8X-4d-BdU" secondAttribute="trailing" constant="5" id="jbB-m1-APq"/>
                     <constraint firstItem="fyI-rp-T5Q" firstAttribute="centerY" secondItem="iuB-G9-LyX" secondAttribute="centerY" constant="-1" id="joq-v7-SG7"/>
+                    <constraint firstItem="u72-lp-xTb" firstAttribute="width" secondItem="iuB-G9-LyX" secondAttribute="width" multiplier="1/6" id="ptf-WL-cDk"/>
                     <constraint firstItem="u8X-4d-BdU" firstAttribute="baseline" secondItem="u72-lp-xTb" secondAttribute="baseline" id="qV9-KU-dGh"/>
                     <constraint firstItem="fyI-rp-T5Q" firstAttribute="leading" secondItem="iuB-G9-LyX" secondAttribute="leading" constant="4" id="sGj-Pj-DV7"/>
                 </constraints>
