--- a/trunk/SabadBan/SabadBan/buyInfoHeader.xib
+++ b/trunk/SabadBan/SabadBan/buyInfoHeader.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="IRANSans.ttf">
@@ -24,32 +25,38 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YUs-ws-RFX">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Hg-qT-wDR">
-                            <rect key="frame" x="30" y="10" width="26" height="23"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="2Hg-qT-wDR">
+                            <rect key="frame" x="50" y="10" width="35" height="23"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="35" id="2Iq-XF-RZn"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="14"/>
                             <color key="textColor" red="0.73096084859999999" green="0.82502295140000004" blue="0.97729875649999998" alpha="0.68619791669999997" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Del" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9lK-DL-8ek">
-                            <rect key="frame" x="2" y="10" width="22" height="23"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Del" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="9lK-DL-8ek">
+                            <rect key="frame" x="2" y="10" width="35" height="23"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="35" id="IXq-nP-7lT"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="14"/>
                             <color key="textColor" red="0.73096084859999999" green="0.82502295140000004" blue="0.97729875649999998" alpha="0.68619791669999997" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Os-WF-jij">
-                            <rect key="frame" x="102" y="10" width="41" height="23"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="1Os-WF-jij">
+                            <rect key="frame" x="95" y="10" width="50" height="23"/>
                             <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="14"/>
                             <color key="textColor" red="0.73096084859999999" green="0.82502295140000004" blue="0.97729875649999998" alpha="0.68619791669999997" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYf-ML-se3">
-                            <rect key="frame" x="178" y="10" width="35" height="23"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="pYf-ML-se3">
+                            <rect key="frame" x="150" y="10" width="50" height="23"/>
                             <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="14"/>
                             <color key="textColor" red="0.73096084859999999" green="0.82502295140000004" blue="0.97729875649999998" alpha="0.68619791669999997" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Xg-GC-lM3">
-                            <rect key="frame" x="260" y="10" width="32" height="23"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="3Xg-GC-lM3">
+                            <rect key="frame" x="206" y="10" width="86" height="23"/>
                             <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="14"/>
                             <color key="textColor" red="0.73096084859999999" green="0.82502295140000004" blue="0.97729875649999998" alpha="0.68619791669999997" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -57,17 +64,26 @@
                     </subviews>
                     <color key="backgroundColor" red="0.090196078430000007" green="0.13725490200000001" blue="0.25098039220000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="pYf-ML-se3" firstAttribute="width" secondItem="YUs-ws-RFX" secondAttribute="width" multiplier="1/6" id="8mb-Ql-Srf"/>
                         <constraint firstItem="9lK-DL-8ek" firstAttribute="leading" secondItem="YUs-ws-RFX" secondAttribute="leading" constant="2" id="G2S-vx-LCC"/>
                         <constraint firstItem="1Os-WF-jij" firstAttribute="centerY" secondItem="YUs-ws-RFX" secondAttribute="centerY" id="JLk-OX-NqX"/>
-                        <constraint firstItem="2Hg-qT-wDR" firstAttribute="leading" secondItem="9lK-DL-8ek" secondAttribute="trailing" constant="6" id="Ldi-vo-xyR"/>
-                        <constraint firstItem="pYf-ML-se3" firstAttribute="leading" secondItem="1Os-WF-jij" secondAttribute="trailing" constant="35" id="MQb-OO-BeL"/>
+                        <constraint firstItem="2Hg-qT-wDR" firstAttribute="leading" secondItem="9lK-DL-8ek" secondAttribute="trailing" constant="13" id="Ldi-vo-xyR"/>
+                        <constraint firstItem="pYf-ML-se3" firstAttribute="leading" secondItem="1Os-WF-jij" secondAttribute="trailing" constant="5" id="MQb-OO-BeL"/>
                         <constraint firstItem="9lK-DL-8ek" firstAttribute="baseline" secondItem="1Os-WF-jij" secondAttribute="baseline" id="Y35-RD-dY4"/>
                         <constraint firstItem="2Hg-qT-wDR" firstAttribute="baseline" secondItem="3Xg-GC-lM3" secondAttribute="baseline" id="Zcw-6d-I86"/>
                         <constraint firstItem="2Hg-qT-wDR" firstAttribute="centerY" secondItem="YUs-ws-RFX" secondAttribute="centerY" id="bhX-3G-OY7"/>
+                        <constraint firstItem="3Xg-GC-lM3" firstAttribute="width" secondItem="YUs-ws-RFX" secondAttribute="width" multiplier="2/7" id="eSc-5h-yYZ"/>
                         <constraint firstAttribute="trailing" secondItem="pYf-ML-se3" secondAttribute="trailing" constant="87" id="gGU-xh-BaJ"/>
+                        <constraint firstItem="1Os-WF-jij" firstAttribute="width" secondItem="YUs-ws-RFX" secondAttribute="width" multiplier="1/6" id="o2I-dg-deH"/>
                         <constraint firstItem="3Xg-GC-lM3" firstAttribute="trailing" secondItem="YUs-ws-RFX" secondAttribute="trailingMargin" id="otU-Nv-xNS"/>
                         <constraint firstItem="1Os-WF-jij" firstAttribute="baseline" secondItem="pYf-ML-se3" secondAttribute="baseline" id="q9X-Uf-gVc"/>
+                        <constraint firstItem="1Os-WF-jij" firstAttribute="leading" secondItem="2Hg-qT-wDR" secondAttribute="trailing" constant="10" id="to2-ZX-zsb"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="gGU-xh-BaJ"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
