--- a/trunk/SabadBan/SabadBan/IndexHeader.xib
+++ b/trunk/SabadBan/SabadBan/IndexHeader.xib
@@ -9,11 +9,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IndexTableViewController" customModule="SabadBan" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="IndexHeader" customModule="SabadBan" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="571" height="57"/>
+            <rect key="frame" x="0.0" y="0.0" width="571" height="73"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IiM-tW-7n0">
-                    <rect key="frame" x="0.0" y="0.0" width="571" height="57"/>
+                    <rect key="frame" x="0.0" y="0.0" width="571" height="73"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Index" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKh-dB-zAj">
                             <rect key="frame" x="505" y="18" width="42" height="21"/>
@@ -33,16 +33,26 @@
                             <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ayU-uk-z6P">
+                            <rect key="frame" x="8" y="52" width="539" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.99044573739999997" green="1" blue="0.95424887199999997" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" red="0.16452825085752149" green="0.21934768017884673" blue="0.3188829919472469" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="ayU-uk-z6P" secondAttribute="bottom" id="DkW-On-Zaa"/>
                         <constraint firstItem="mKM-wb-f4y" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="trailing" constant="45" id="EvE-gZ-MIt">
                             <variation key="heightClass=regular-widthClass=regular" constant="118"/>
                         </constraint>
-                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="centerY" secondItem="IiM-tW-7n0" secondAttribute="centerY" id="Wkz-uc-nB3"/>
+                        <constraint firstItem="ayU-uk-z6P" firstAttribute="trailing" secondItem="oKh-dB-zAj" secondAttribute="trailing" id="KHO-a1-3mK"/>
+                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="centerY" secondItem="IiM-tW-7n0" secondAttribute="centerY" constant="-8" id="Wkz-uc-nB3"/>
                         <constraint firstItem="mKM-wb-f4y" firstAttribute="baseline" secondItem="oKh-dB-zAj" secondAttribute="baseline" id="egh-bR-VRz"/>
+                        <constraint firstItem="ayU-uk-z6P" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="leading" id="pAJ-DP-rW9"/>
                         <constraint firstItem="gBh-Vu-QuM" firstAttribute="baseline" secondItem="mKM-wb-f4y" secondAttribute="baseline" id="r7x-uT-cDG"/>
                         <constraint firstAttribute="trailing" secondItem="oKh-dB-zAj" secondAttribute="trailing" constant="24" id="v2J-nH-uWN"/>
+                        <constraint firstItem="ayU-uk-z6P" firstAttribute="top" secondItem="mKM-wb-f4y" secondAttribute="bottom" constant="13" id="xOA-b6-veG"/>
                         <constraint firstItem="gBh-Vu-QuM" firstAttribute="leading" secondItem="IiM-tW-7n0" secondAttribute="leadingMargin" id="yog-Jx-FqS">
                             <variation key="heightClass=regular-widthClass=regular" constant="25"/>
                         </constraint>
@@ -60,9 +70,10 @@
             <connections>
                 <outlet property="lblCount" destination="mKM-wb-f4y" id="tC0-YX-2wy"/>
                 <outlet property="lblIndex" destination="oKh-dB-zAj" id="aqm-TQ-4cm"/>
+                <outlet property="lblLastUpdate" destination="ayU-uk-z6P" id="xUE-eT-TGi"/>
                 <outlet property="lblPercent" destination="gBh-Vu-QuM" id="gvx-Ig-TLS"/>
             </connections>
-            <point key="canvasLocation" x="315.5" y="170.5"/>
+            <point key="canvasLocation" x="315.5" y="178.5"/>
         </view>
     </objects>
 </document>
